# mnt-nanoplacer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  GNN.py  License  MANIFEST.in  README.md  evo.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: codeql.yml  coverage.yml  deploy.yml
benchmarks/EPFL/: ctrl.v  div.v  log2.v  max.v  multiplier.v  sin.v  sqrt.v  square.v  voter.v
benchmarks/ISCAS85/: c1355.v  c17.v  c1908.v  c3540.v  c432.v  c499.v  c5315.v
benchmarks/TOY/: RCA2.v  b1_r2.v  clpl.v  t.v
benchmarks/fontes18/: 1bitAdderAOIG.v  1bitAdderMaj.v  2bitAdderMaj.v  b1_r2.v  newtag.v  t.v  xor.v  xor5_r1.v
custom_envs/: __init__.py
custom_envs/envs/: __init__.py  qca_env_v6.py  qca_env_v6_use.py  qca_env_v7.py  qca_env_v8.py  qca_env_v9.py
custom_envs/wrappers/: reacher_weighted_reward.py
images/: .gitignore
misc/: actions.py  draw.py  er.py  err.py  hex_mapping.py  localize_error.py  mux.py  mux_crossings.py  network.py  network_distance.py  route.py
models/: .gitignore
placement_envs/: __init__.py  nano_placement_env.py
placement_envs/envs/: __init__.py  nano_placement_env.py
placement_envs/utils/: __init__.py  cartesian_to_hexagonal.py  layout_dimensions.py  placement_utils.py  post_placement_optimization.py
ppo_masked/: __init__.py
ppo_masked/common/maskable/: buffers.py  callbacks.py  distributions.py  evaluation.py  policies.py
ppo_masked/ppo_mask/: __init__.py  policies.py  ppo_mask.py
src/mnt/nanoplacer/: __init__.py  main.py  nanoplacer.py
src/mnt/nanoplacer/benchmarks/EPFL/: adder.v  arbiter.v  bar.v  cavlc.v  dec.v  i2c.v  int2float.v  priority.v  router.v
src/mnt/nanoplacer/benchmarks/ISCAS85/: c2670.v  c6288.v  c7552.v  c880.v
src/mnt/nanoplacer/benchmarks/TOY/: newtag.v  xor5_r1.v
src/mnt/nanoplacer/benchmarks/fontes18/: c17.v  clpl.v  cm82a_5.v  majority.v  majority_5_r1.v  parity.v  t_5.v  xor5Maj.v
src/mnt/nanoplacer/placement_envs/: nano_placement_env.py
src/mnt/nanoplacer/placement_envs/utils/: placement_utils.py
src/nanoplacer/: nanoplacer.py
src/nanoplacer/placement_envs/: __init__.py  nano_placement_env.py
tests/: test_env.py  test_main.py  test_utils.py
